Add shared folder,events,publish AccountRegistered

--- a/Customers/customers/customers.csproj
+++ b/Customers/customers/customers.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Commands\commands\commands.csproj" />
+    <ProjectReference Include="..\..\Shared\events\events.csproj" />
   </ItemGroup>
 
 </Project>
