--- a/Marketing/loyalty/loyalty.csproj
+++ b/Marketing/loyalty/loyalty.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyName>Gamer.Marketing.Loyalty</AssemblyName>
+    <RootNamespace>Gamer.Marketing.Loyalty</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
