--- a/Shared/events/events.csproj
+++ b/Shared/events/events.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>Gamer.Events</AssemblyName>
+    <RootNamespace>Gamer.Events</RootNamespace>
   </PropertyGroup>
 
 </Project>
