--- a/Customer Interactions/website/appsettings.json
+++ b/Customer Interactions/website/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "mongo-db": "mongodb://localhost:27018"
+  } 
 }
