--- a/Customer Interactions/website/website.csproj
+++ b/Customer Interactions/website/website.csproj
@@ -13,10 +13,12 @@
   <ItemGroup>
     <PackageReference Include="MassTransit.AspNetCore" Version="7.0.6" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="7.0.6" />
+    <PackageReference Include="MongoDB.Driver" Version="2.11.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Commands\commands\commands.csproj" />
+    <ProjectReference Include="..\..\Shared\events\events.csproj" />
   </ItemGroup>
 
 </Project>
