--- a/Menu/menu-website/Properties/launchSettings.json
+++ b/Menu/menu-website/Properties/launchSettings.json
@@ -22,6 +22,10 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5004;http://localhost:5003"
+    },
+    "console-website": {
+      "commandName": "Project",
+      "applicationUrl": "https://localhost:5002;http://localhost:5003"
     }
   }
 }
