Refactored Models to add clarity
- Tried to define the boundaries between Consumed models, Stored Models and reduced copy and paste to help set better practices
- Added library for shared models between Customer Interactions

--- a/Customer Interactions/kafka.consumers/kafka.consumers.csproj
+++ b/Customer Interactions/kafka.consumers/kafka.consumers.csproj
@@ -26,6 +26,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\mongo.repository\mongo.repository.csproj" />
+    <ProjectReference Include="..\interactions.models\interactions.models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
   </ItemGroup>
 
 </Project>
