Refactor out Menus to store menu in database
Removed kafka publish for now so as to store the menu

--- a/Menu/menu-website/appsettings.json
+++ b/Menu/menu-website/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "menus": "Data Source=localhost,1434;Initial Catalog=Menus;User Id=sa;Password=STr0ng!p@s5w0rd;MultipleActiveResultSets=True"
+  } 
 }
