--- a/Menu/menu-website/menu-website.csproj
+++ b/Menu/menu-website/menu-website.csproj
@@ -12,6 +12,18 @@
 
   <ItemGroup>
     <PackageReference Include="Confluent.Kafka" Version="1.5.2" />
+    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\menu.application\menu.application.csproj" />
+    <ProjectReference Include="..\menu.core\menu.core.csproj" />
   </ItemGroup>
 
 </Project>
