--- a/Menu/menu.core/menu.core.csproj
+++ b/Menu/menu.core/menu.core.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Gamer.Menu.Core</AssemblyName>
     <RootNamespace>Gamer.Menu.Core</RootNamespace>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
