--- a/Menu/menu.application/menu.application.csproj
+++ b/Menu/menu.application/menu.application.csproj
@@ -8,12 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="1.6.3" />
     <PackageReference Include="FluentValidation" Version="9.3.0" />
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Shared\kafka.shared\kafka.shared.csproj" />
     <ProjectReference Include="..\menu.core\menu.core.csproj" />
     <ProjectReference Include="..\menu.viewmodels\menu.viewmodels.csproj" />
   </ItemGroup>
