Consume the published menu
- In kakfa.consumers of the client interaction service, consume the menu to Mongodb, replace if the menu is being sent again
- Fixed configuration for publishing to use appsettings

--- a/Menu/menu-website/appsettings.json
+++ b/Menu/menu-website/appsettings.json
@@ -11,7 +11,7 @@
         "menus": "Data Source=localhost,1434;Initial Catalog=Menus;User Id=sa;Password=STr0ng!p@s5w0rd;MultipleActiveResultSets=True"
     },
   "kafka": {
-      "producer-configuration": {
+      "producer": {
           "bootstrap.servers": "127.0.0.1:9092" 
       }
   }
