--- a/Marketing/loyalty/loyalty.csproj
+++ b/Marketing/loyalty/loyalty.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Gamer.Marketing.Loyalty</AssemblyName>
     <RootNamespace>Gamer.Marketing.Loyalty</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MassTransit.RabbitMQ" Version="7.0.6" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="7.1.8" />
   </ItemGroup>
 
   <ItemGroup>
