--- a/Customer Interactions/website/website.csproj
+++ b/Customer Interactions/website/website.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="MassTransit.AspNetCore" Version="7.1.8" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="7.1.8" />
     <PackageReference Include="MongoDB.Driver" Version="2.12.3" />
+    <PackageReference Include="NEST" Version="7.13.0" />
   </ItemGroup>
 
   <ItemGroup>
